# SVN Info: $Id$

#####################################################################
##                           TAPSMaintain                          ##
##                                                                 ##
##               Universal TAPS maintenance software               ##
##                                                                 ##
##                            Changelog                            ##
##                                                                 ##
#####################################################################


0.1.1 : 16 Oct 2008
* Set PbWO4 mips energy loss to 29.5 MeV
* HV values are now written channel per channel to the HVServer
* Improved fitting in cosmics calibration for PbWO4 detectors

0.1.0 : 02 Jul 2008
* Initial release
